@@ -1,3 +1,10 @@
+2001-01-19  Michael Engber  <engber@eazel.com>
+
+	reviewed by: Brian Frank
+
+	* data/static_bookmarks.xml:
+	Changes for PR3 default bookmarks. Use redirects.
+
 2001-01-19  John Sullivan  <sullivan@eazel.com>
 
 	reviewed by: Darin Adler  <darin@eazel.com>
